# cathay-valet

./: .gitignore  Cargo.toml  README.md  chat.db  package-lock.json  package.json  shell.nix
KitBash/: click.js  index.html  settings.html  styles.css  track.html
app/routes/: _index.tsx
src/: amplifyconfiguration.json  db.rs  main.jsx  main.rs  models.rs  routes.rs  schema - Copy.rs  schema.rs  server.rs  session.rs
src/app/: page.js
static/: index.html
web/: node-packages.nix  package-lock.json  package.json  tailwind.config.js
web/components/: avatar.js  conversation.js  createconversation.js  createroom.js  joinroom.js  login.js  room.js
web/libs/: useConversation.js  useLocalStorage.js  useWebsocket.js
web/pages/: index.js  index.js.old
