[package]
name = "fask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
chrono = "0.4.24"
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }
r2d2 = "0.8.10"
rand = "0.8.5"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
